--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 	    <![endif]-->
 
+
 	    <!-- Navigation -->
 	    <nav class="navbar navbar-default" role="navigation">
 	    	<div class="container">
@@ -131,6 +132,7 @@
 	    	<div class="container">
 	    		<div class="row">
 	    			<div class="col-lg-12">
+	    				(UNDER CONSTRUCTION)
 	    			</div>
 	    		</div>
 	    	</div>
