changed home and about

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
 	    	<div class="container">
 	    		<div class="row">
 	    			<div class="col-lg-12 col-xs-12">
-	    				<div id="m">
+<!-- 	    				<div id="m">
 	    					<img class="img-responsive center-block" id="logo" src="img/logo2.png">
 
+	    				</div> -->
+	    				<div id="name">
+	    					<span class="there">MAYAA</span><span class="expand">NGELICA</span><span class="there">H</span><span class="expand">ERNANDEZ</span>
 	    				</div>
 	    			</div>
 	    		</div>
@@ -83,49 +86,7 @@
 	    </section> -->
 
 	    <section class="aboutmiddle" style="display: none;">
-	    	<div class="container">
-	    		<div class="row">
-	    			<div class="col-md-2">
-	    				<img class="img-responsive lilsun" id="me" src="img/me.png">
-	    			</div>
-	    			<div class="col-md-8">
-	    				<img class="img-responsive" id="halfsun" src="img/halfsun.png">
-	    				<div class="abouttext"><span class="about" id="name"> My name is Maya</span>. <span id="homes" class="about"> My homes are Sacramento, Berkeley, & the Philippines.</span><span id="school" class="about"> I attend UC Berkeley.</span><span class="about" id="read">I like to read.</span><span class="about" id="write">I like to write. </span><span class="about" id="design">I like to design. </span> <span class="about" id="code">I like to code. </span></div>
-	    			</div>
-	    			<div class="col-md-2">
-	    				<img class="img-responsive lilsun" id="code" src="img/code.png">
-	    			</div>
-	    		</div>
-	    		<div class="row" id="sunz">
-	    			<div class="col-md-3">
-	    				<img class="img-responsive lilsun" id="phil" src="img/phil.png">
-	    			</div>
-	    			<div class="col-md-6">
-	    			</div>
-	    			<div class="col-md-3">
-	    				<img class="img-responsive lilsun" id="think" src="img/think.png">
-	    			</div>
-	    		</div>
-	    		<div class="row" id="sunz" style="padding-top: 50px; padding-bottom: 0px;">
-	    			<div class="col-md-5">
-	    				<img class="img-responsive lilsun" id="bear" src="img/bear.png">
-	    			</div>
-	    			<div class="col-md-2">
-	    			</div>
-	    			<div class="col-md-5">
-	    				<img class="img-responsive lilsun" id="pilcrow" src="img/pilcrow.png">
-	    			</div>
-	    		</div>
-	    		<div class="row" id="sunz" style="padding-bottom: 0px;">
-	    			<div class="col-md-5">
-	    			</div>
-	    			<div class="col-md-2">
-	    				<img class="img-responsive lilsun" id="books" src="img/books.png">
-	    			</div>
-	    			<div class="col-md-5">
-	    			</div>
-	    		</div>
-	    	</div>
+
 	    </section>
 
 	   	<section class="bottom">
