--- a/index.html
+++ b/index.html
@@ -57,65 +57,31 @@
 
 
 	    <section class="middle">
-	    	<div class="container">
 	    		<div class="row">
 	    			<div class="col-lg-12 col-xs-12">
-<!-- 	    				<div id="m">
-	    					<img class="img-responsive center-block" id="logo" src="img/logo2.png">
-
-	    				</div> -->
 	    				<div id="name">
 	    					<span class="there">MAYAA</span><span class="expand">NGELICA</span><span class="there">H</span><span class="expand">ERNANDEZ</span>
 	    				</div>
 	    			</div>
 	    		</div>
-	    	</div>
-	    </section>
-
-<!-- 	    <section class="aboutmiddle" style="display: none;">
-	    	<div class="container">
-	    		<div class="row">
-	    				<img class="img-responsive"id="profilepic" src="img/prof.jpg">
-	    		</div>
-	    		<div class="row">
-	    			<div class="aboutcontainer">
-	    				<div class="abouttext"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></div>
-	    			</div>
-	    		</div>
-	    	</div>
-	    </section> -->
-
-	    <section class="aboutmiddle" style="display: none;">
-
-	    </section>
-
-	   	<section class="bottom">
-	    	<div class="container">
 	    		<div class="row">
 	    			<div class="col-lg-12">
-	    				(UNDER CONSTRUCTION)
+	    				<div class ="sky">
+	    					<div class="clouds_one"></div>
+	    					<div class="clouds_two"></div>
+	    					<div class="clouds_three"></div>
+	    				</div>
 	    			</div>
 	    		</div>
-	    	</div>
 	    </section>
 
-	    <!-- About Modal -->
-<!-- 	    <div class="footer-modal modal fade" id="modal1" tabindex="-1" role="dialog" aria-hidden="true">
-	    	<div class="modal-content">
-	    		<div class="lr">
-	    			<div class="rl">
-	    			</div>
-	    		</div>
-	    	</div>
+	    <section class="aboutmiddle" style="display: none;">
 	    	<div class="container">
-	    		<div class="col-lg-8 col-lg-offset-2">
-	    			<div class="modal body">
-	    				<h2>About Me</h2>
-	    				<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>Close</button>
-	    			</div>
+	    		<div class="row">
 	    		</div>
-	    	</div>
-	    </div> -->
+	    </section>
+
+
 
  	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
