--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
 	    		</div>
 	    </section>
 
+	    <section class="contactmiddle" style="display: none;">
+	    	<div class="stars"></div>
+	    </section>
+
 
 
  	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
