--- a/index.html
+++ b/index.html
@@ -78,11 +78,28 @@
 	    <section class="aboutmiddle" style="display: none;">
 	    	<div class="container">
 	    		<div class="row">
+	    			<div class="col-lg-12">
+
+	    			</div>
 	    		</div>
 	    </section>
 
 	    <section class="contactmiddle" style="display: none;">
 	    	<div class="stars"></div>
+	    	<div class="row">
+	    		<div class="ciconlist">
+	    		<div class="col-sm-1 col-sm-offset-4 cicon">
+	    			<a href="https://www.linkedin.com/in/mayaah"><img src="css/img/li.png"></a></div>
+	    			<div class="col-sm-1 cicon">
+	    			<a href="https://github.com/mayaah"><img src="css/img/gh.png"></a></div>
+	    			<div class="col-sm-1 cicon">
+	    			<a href="https://www.youtube.com/channel/UCA9LKLw8TGmIiA_LF3N2_bw"><img src="css/img/yt.png"></a></div>
+	    			<div class="col-sm-1 cicon">
+	    			<a href="mailto:mayaah@berkeley.edu"><img src="css/img/mail.png"></a></div>
+	    		</div>
+	    		</div>
+	    		</div>
+	    	</div>
 	    </section>
 
 
