--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
 	    	<div class="container">
 	    		<div class="row">
 	    			<div class="col-lg-12">
-
+	    				<div class="circle">
+	    					<div class="cinfo">
+	    						<h3> Hi! I'm Maya </h3>
+	    						<p>I’m a computer science student at UC Berkeley. Currently, I work as a front-end web developer with occasional tinkering in the backend for the startup OraViz in San Francisco and am seeking employment during summer 2016 and beyond. I appreciate clean design, clean code, and clean public restrooms. In my free time I write, wait for the next season of Game of Thrones, Reddit, and stare at the sky during long travels, which is the inspiration for this site.</p>
+	    					</div>
+	    				</div>
 	    			</div>
 	    		</div>
 	    </section>
