--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 	    			<ul class="nav navbar-nav">
 	    				<li><a href="index.html" id="home">HOME</a></li>
 	    				<li><a href="about.html" class="transition" id="about">ABOUT</a></li>
-	    				<li><a href="projects.html" class="transition" id="projects">PROJECTS</a></li>
 	    				<li><a href="skills.html" class="transition" id="skills">SKILLS</a></li>
+	    				<li><a href="projects.html" class="transition" id="projects">PROJECTS</a></li>
 	    				<li><a href="resume.html" class="transition" id="resume">RESUME</a></li>
 	    				<li><a href="contact.html" class="transition" id="contact">CONTACT</a></li>
 	    			</ul>
@@ -82,11 +82,57 @@
 	    				<div class="circle">
 	    					<div class="cinfo">
 	    						<h3> Hi! I'm Maya </h3>
-	    						<p>I’m a computer science student at UC Berkeley. Currently, I work as a front-end web developer with occasional tinkering in the backend for the startup OraViz in San Francisco and am seeking employment during summer 2016 and beyond. I appreciate clean design, clean code, and clean public restrooms. In my free time I write, wait for the next season of Game of Thrones, Reddit, and stare at the sky during long travels, which is the inspiration for this site.</p>
+	    						<p>I study computer science at UC Berkeley and work as a front-end web developer with occasional tinkering in the backend for the startup OraViz in San Francisco. I am seeking employment during summer 2016 and beyond. I appreciate clean design, clean code, and clean public restrooms. In my free time I write, wait for the next season of Game of Thrones, Reddit, and stare at the sky during long travels, which is the inspiration for this site. I considered putting my face inside the sun Teletubbies style but thought that would be too creepy. </p>
 	    					</div>
 	    				</div>
 	    			</div>
 	    		</div>
+	    </section>
+
+	    <section class="skillsmiddle">
+	    	<canvas id="c"></canvas>
+	    	<div class="skills">
+	    	<div class="container">
+	    		<div class="row">
+	    			<div class="col-sm-1" id="python">
+	    				<div class="bar"><p><span>70%</span></p></div>python
+	    			</div>
+	    			<div class="col-sm-1 bar" id="java">
+	    				<div class="bar"><p><span>60%</span></p></div>java
+	    			</div>
+	    			<div class="col-sm-1 bar" id="c">
+	    				<div class="bar"><p><span>50%</span></p></div>c
+	    			</div>
+	    			<div class="col-sm-1 bar" id="rr">
+	    				<div class="bar"><p><span>50%</span></p></div>ruby on rails
+	    			</div>
+	    			<div class="col-sm-1 bar" id="html">
+	    				<div class="bar"><p><span>85%</span></p></div>html
+	    			</div>
+	    			<div class="col-sm-1 bar" id="css">
+	    				<div class="bar"><p><span>85%</span></p></div>css
+	    			</div>
+	    			<div class="col-sm-1 bar" id="jj">
+	    				<div class="bar"><p><span>70%</span></p></div>javascript/<br>jquery
+	    			</div>
+	    			<div class="col-sm-1 bar" id="bs">
+	    				<div class="bar"><p><span>70%</span></p></div>bootstrap
+	    			</div>
+	    			<div class="col-sm-1 bar" id="git">
+	    				<div class="bar"><p><span>55%</span></p></div>git/<br>github
+	    			</div>
+	    			<div class="col-sm-1 bar" id="arduino">
+	    				<div class="bar"><p><span>20%</span></p></div>arduino
+	    			</div>
+	    			<div class="col-sm-1 bar" id="photoshop">
+	    				<div class="bar"><p><span>70%</span></p></div>photoshop
+	    			</div>
+	    			<div class="col-sm-1 bar" id="french">
+	    				<div class="bar"><p><span>60%</span></p></div>French
+	    			</div>
+	    		</div>
+	    		</div>
+	    	</div>
 	    </section>
 
 	    <section class="contactmiddle" style="display: none;">
