--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	    				<div class="circle">
 	    					<div class="cinfo">
 	    						<h3> Hi! I'm Maya </h3>
-	    						<p>I study computer science at UC Berkeley and work as a front-end web developer with occasional tinkering in the backend for the startup OraViz in San Francisco. I am seeking employment during summer 2016 and beyond. I appreciate clean design, clean code, and clean public restrooms. In my free time I write, wait for the next season of Game of Thrones, Reddit, and stare at the sky during long travels, which is the inspiration for this site. I considered putting my face inside the sun Teletubbies style but thought that would be too creepy. </p>
+	    						<p>I study computer science at UC Berkeley and work as a front-end web developer with tinkerings in the backend for the startup OraViz in San Francisco. I am seeking employment during summer 2016 and beyond. I appreciate clean design, clean code, and clean public restrooms. In my free time I write, wait for the next season of Game of Thrones, Reddit, and stare at the sky during long travels, which is the inspiration for this site. </p>
 	    					</div>
 	    				</div>
 	    			</div>
@@ -122,7 +122,7 @@
 	    				<div class="bar"><p><span>55%</span></p></div>git/<br>github
 	    			</div>
 	    			<div class="col-sm-1 bar" id="arduino">
-	    				<div class="bar"><p><span>20%</span></p></div>arduino
+	    				<div class="bar"><p><span>15%</span></p></div>arduino
 	    			</div>
 	    			<div class="col-sm-1 bar" id="photoshop">
 	    				<div class="bar"><p><span>70%</span></p></div>photoshop
@@ -132,6 +132,119 @@
 	    			</div>
 	    		</div>
 	    		</div>
+	    	</div>
+	    </section>
+
+	    <section class="projectsmiddle">
+	    	<div class="lb-album">
+	    		<div class="row">
+	    		<div class="col-sm-2 col-sm-offset-2 proj">
+	    			<a href="#website">
+	    				<img src="css/img/thumb/webscreen"><span>Personal Website</span></a>
+	    			<div class="lb-overlay" id="website">
+	    				<img src="css/img/full/webscreen.png"><div>
+	    			<h3>Personal Website</h3>
+	    			<p>What you’re looking at now! Created from scratch using HTML, CSS, JavaScript, jQuery, and Bootstrap. I considered putting my face inside the sun Teletubbies style on the about page but thought that would be too creepy.</p>
+	    			<a href="#pacman" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#fw" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#fw">
+	    				<img src="css/img/thumb/fw"><span>Fun:Work</span></a>
+	    			<div class="lb-overlay" id="fw">
+	    				<img src="css/img/full/fw.png"><div>
+	    			<h3>Fun:Work</h3>
+	    			<p>Ruby on Rails app born during Cal Hacks and still in progress. Users can sign up for an account in which, once implemented, they will input hours spent in their day having fun or working and their contentment level, which will be translated over time into their personal fun-to-work ratio for optimum contentment. </p>
+	    			<a href="#website" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#asq" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#asq">
+	    				<img src="css/img/thumb/asq"><span>A Sea of Quotes</span></a>
+	    			<div class="lb-overlay" id="asq">
+	    				<img src="css/img/full/asq.png"><div>
+	    			<h3>A Sea of Quotes</h3>
+	    			<p>Tumblr blog started in 2011 in which quotes from literature are posted frequently. Now at over 247,000 followers. The Seas Apparel was inspired by this blog.</p>
+	    			<a href="#fw" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#graphs" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#graphs">
+	    				<img src="css/img/thumb/graphs"><span>Graph Library Package and Clients</span></a>
+	    			<div class="lb-overlay" id="graphs">
+	    				<img src="css/img/full/graphs.png"><div>
+	    			<h3>Graph Library Package and Clients</h3>
+	    			<p>For Data Structures class, created graph library in Java for directed and undirected graphs with depth-first, breadth-first, or A* search options. The trip finder client uses this library to return the shortest path given a map and destination request. The make client uses the library for Makefile functionality, with directed graphs representing the rules of dependencies for files. I dreamt about this project for many  nights.</p>
+	    			<a href="#asq" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#jump" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    	</div>
+	    	<div class="row">
+	    		<div class="col-sm-2 col-sm-offset-2 proj">
+	    			<a href="#jump">
+	    				<img src="css/img/thumb/jump"><span>Jumping Cubes Game</span></a>
+	    			<div class="lb-overlay" id="jump">
+	    				<img src="css/img/full/jump.png"><div>
+	    			<h3>Jumping Cubes Game</h3>
+	    			<p>For Data Structures class, created game logic for strategy game Jump61 in Java which responds to textual input commands with users or computer as players. Implemented AI that uses Minimax and alpha-beta pruning. In which I truly appreciated recursion.</p>
+	    			<a href="#graphs" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#beargit" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#beargit">
+	    				<img src="css/img/thumb/beargit"><span>Beargit</span></a>
+	    			<div class="lb-overlay" id="beargit">
+	    				<img src="css/img/full/beargit.png"><div>
+	    			<h3>Beargit</h3>
+	    			<p>For Machine Structures Class, implemented simpler version of git called Beargit in C with status, rm, commit, log, branch, and checkout functionalities. In which recursion saved me yet again. </p>
+	    			<a href="#jump" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#al" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#al">
+	    				<img src="css/img/thumb/al"><span>Assembler and Linker</span></a>
+	    			<div class="lb-overlay" id="al">
+	    				<img src="css/img/full/al.png"><div>
+	    			<h3>Assembler and Linker</h3>
+	    			<p>Worked with partner to implement an assembler in C which translates some MIPS instructions to machine code and a linker in MIPS using the program MARS to process object files and generate an executable file. My MIPS green sheet was printed on white paper, however . ☹ I have vivid memory of staring at this particular lecture slide.</p>
+	    			<a href="#beargit" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#pacman" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#pacman">
+	    				<img src="css/img/thumb/pacman"><span>Pacman Logical Planning Agent</span></a>
+	    			<div class="lb-overlay" id="pacman">
+	    				<img src="css/img/full/pacman.png"><div>
+	    			<h3>Pacman Logical Planning Agent</h3>
+	    			<p>For Artificial Intelligence class, wrote software in Python to generate logical sentences describing moving, eating, and predictable ghosts and encode initial states and goals and logic inference to pass into SAT solver for best action sequence. My partner and I were proud parents of our smart Pacman.</p>
+	    			<a href="#al" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#website" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    	</div>
 	    	</div>
 	    </section>
 
