--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	    				<li><a href="about.html" class="transition" id="about">ABOUT</a></li>
 	    				<li><a href="skills.html" class="transition" id="skills">SKILLS</a></li>
 	    				<li><a href="projects.html" class="transition" id="projects">PROJECTS</a></li>
-	    				<li><a href="resume.html" class="transition" id="resume">RESUME</a></li>
+	    				<li><a href="mayaahresume.pdf" id="resume">RESUME</a></li>
 	    				<li><a href="contact.html" class="transition" id="contact">CONTACT</a></li>
 	    			</ul>
 	    		</div>
