added more projs
whee

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 	    			<div class="lb-overlay" id="fw">
 	    				<img src="css/img/full/fw.png"><div>
 	    			<h3>Fun:Work</h3>
-	    			<p>Ruby on Rails app born during Cal Hacks and still in progress. Users can sign up for an account in which, once implemented, they will input hours spent in their day having fun or working and their contentment level, which will be translated over time into their personal fun-to-work ratio for optimum contentment. </p>
+	    			<p>Ruby on Rails app born during Cal Hacks and still in progress. Users can sign up for an account in which, once implemented, they will input hours spent in their day having fun or working and their contentment level, which will be translated over time into their personal fun-to-work ratio for optimum contentment. <br><a href="https://github.com/francomonterrosa/cal_hacks" target="_blank">View code on Github</a></br></p>
 	    			<a href="#website" class="glyphicon glyphicon-chevron-left"></a>
 	    			<a href="#asq" class="glyphicon glyphicon-chevron-right"></a>
 	    		</div>
@@ -170,7 +170,7 @@
 	    			<div class="lb-overlay" id="asq">
 	    				<img src="css/img/full/asq.png"><div>
 	    			<h3>A Sea of Quotes</h3>
-	    			<p>Tumblr blog started in 2011 in which quotes from literature are posted frequently. Now at over 247,000 followers. The Seas Apparel was inspired by this blog.</p>
+	    			<p>Tumblr blog started in 2011 in which quotes from literature are posted frequently. Now at over 247,000 followers. The Seas Apparel was inspired by this blog.<br><a href="http://aseaofquotes.com" target="_blank">Go to A Sea of Quotes.</a><a href="http://the-seas.spreadshirt.com/" target="_blank"> Go to The Seas Apparel</a></br></p>
 	    			<a href="#fw" class="glyphicon glyphicon-chevron-left"></a>
 	    			<a href="#graphs" class="glyphicon glyphicon-chevron-right"></a>
 	    		</div>
@@ -183,7 +183,7 @@
 	    			<div class="lb-overlay" id="graphs">
 	    				<img src="css/img/full/graphs.png"><div>
 	    			<h3>Graph Library Package and Clients</h3>
-	    			<p>For Data Structures class, created graph library in Java for directed and undirected graphs with depth-first, breadth-first, or A* search options. The trip finder client uses this library to return the shortest path given a map and destination request. The make client uses the library for Makefile functionality, with directed graphs representing the rules of dependencies for files. I dreamt about this project for many  nights.</p>
+	    			<p>For Data Structures class, created graph library in Java for directed and undirected graphs with depth-first, breadth-first, or A* search options. The trip finder client uses this library to return the shortest path given a map and destination request. The make client uses the library for Makefile functionality, with directed graphs representing the rules of dependencies for files. I dreamt about this project for many  nights.<br><a href="https://inst.eecs.berkeley.edu/~cs61b/fa14/hw/proj3.pdf" target="_blank">Read the full spec</a></br></p>
 	    			<a href="#asq" class="glyphicon glyphicon-chevron-left"></a>
 	    			<a href="#jump" class="glyphicon glyphicon-chevron-right"></a>
 	    		</div>
@@ -198,7 +198,7 @@
 	    			<div class="lb-overlay" id="jump">
 	    				<img src="css/img/full/jump.png"><div>
 	    			<h3>Jumping Cubes Game</h3>
-	    			<p>For Data Structures class, created game logic for strategy game Jump61 in Java which responds to textual input commands with users or computer as players. Implemented AI that uses Minimax and alpha-beta pruning. In which I truly appreciated recursion.</p>
+	    			<p>For Data Structures class, created game logic for strategy game Jump61 in Java which responds to textual input commands with users or computer as players. Implemented AI that uses Minimax and alpha-beta pruning. In which I truly appreciated recursion.<br><a href="https://inst.eecs.berkeley.edu/~cs61b/fa14/hw/proj2.pdf" target="_blank">Read the full spec</a></br></p>
 	    			<a href="#graphs" class="glyphicon glyphicon-chevron-left"></a>
 	    			<a href="#beargit" class="glyphicon glyphicon-chevron-right"></a>
 	    		</div>
@@ -211,7 +211,7 @@
 	    			<div class="lb-overlay" id="beargit">
 	    				<img src="css/img/full/beargit.png"><div>
 	    			<h3>Beargit</h3>
-	    			<p>For Machine Structures Class, implemented simpler version of git called Beargit in C with status, rm, commit, log, branch, and checkout functionalities. In which recursion saved me yet again. </p>
+	    			<p>For Machine Structures Class, implemented simpler version of git called Beargit in C with status, rm, commit, log, branch, and checkout functionalities. In which recursion saved me yet again. <br><a href="https://inst.eecs.berkeley.edu/~cs61c/sp15/hw/01/hw1.html" target="_blank">Read the full spec (part 1) </a><a href="https://inst.eecs.berkeley.edu/~cs61c/sp15/hw/02/hw2.html" target="_blank">(part 2)</a></br></p>
 	    			<a href="#jump" class="glyphicon glyphicon-chevron-left"></a>
 	    			<a href="#al" class="glyphicon glyphicon-chevron-right"></a>
 	    		</div>
@@ -224,7 +224,7 @@
 	    			<div class="lb-overlay" id="al">
 	    				<img src="css/img/full/al.png"><div>
 	    			<h3>Assembler and Linker</h3>
-	    			<p>Worked with partner to implement an assembler in C which translates some MIPS instructions to machine code and a linker in MIPS using the program MARS to process object files and generate an executable file. My MIPS green sheet was printed on white paper, however . ☹ I have vivid memory of staring at this particular lecture slide.</p>
+	    			<p>Worked with partner to implement an assembler in C which translates some MIPS instructions to machine code and a linker in MIPS using the program MARS to process object files and generate an executable file. My MIPS green sheet was printed on white paper, however . ☹ I have vivid memory of staring at this particular lecture slide.<br><a href="https://inst.eecs.berkeley.edu/~cs61c/sp15/projs/01/" target="_blank">Read the full spec (part 1) </a><a href="https://inst.eecs.berkeley.edu/~cs61c/sp15/projs/01/part2.html" target="_blank">(part 2)</a></br></p>
 	    			<a href="#beargit" class="glyphicon glyphicon-chevron-left"></a>
 	    			<a href="#pacman" class="glyphicon glyphicon-chevron-right"></a>
 	    		</div>
@@ -239,6 +239,60 @@
 	    			<h3>Pacman Logical Planning Agent</h3>
 	    			<p>For Artificial Intelligence class, wrote software in Python to generate logical sentences describing moving, eating, and predictable ghosts and encode initial states and goals and logic inference to pass into SAT solver for best action sequence. My partner and I were proud parents of our smart Pacman.</p>
 	    			<a href="#al" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#cud" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    	</div>
+	    	<div class="row">
+	    		<div class="col-sm-2 col-sm-offset-2 proj">
+	    			<a href="#cud">
+	    				<img src="css/img/thumb/cud"><span>Cuddlr</span></a>
+	    			<div class="lb-overlay" id="cud">
+	    				<img src="css/img/full/cud.png"><div>
+	    			<h3>Cuddlr</h3>
+	    			<p>Redesigned the landing page for social media app Cuddlr, now known as Spoonr, from scratch in its second iteration. The image is of the before(left) and after(right). Added responsiveness, toggle FAQ, navigation bar, while still keeping mood of original website with colors, font, and logos. <br><a href="https://web.archive.org/web/20141013081346/http://cuddlrapp.com/" target="_blank">Before (from Wayback Machine)</a><a href="https://web.archive.org/web/20141029022007/http://cuddlrapp.com/" target="_blank"> After (from Wayback Machine)</a></br></p>
+	    			<a href="#pacman" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#book" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#book">
+	    				<img src="css/img/thumb/book"><span>NaNoWriMo</span></a>
+	    			<div class="lb-overlay" id="book">
+	    				<img src="css/img/full/book.png"><div>
+	    			<h3>National Novel Writing Month</h3>
+	    			<p>Before writing code I wrote novels. NaNoWriMo is national novel writing month in which you must write 50K words of a novel in the month of November. When you win NaNoWriMo, you can print your novel by CreateSpace. Here is a picture of a few of my novels. Crossed out the title names because they were too embarrassing.<br><a href="http://nanowrimo.org/participants/mayaah" target="_blank">View my NaNoWriMo profile!</a></br> </p>
+	    			<a href="#cud" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#ball" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#ball">
+	    				<img src="css/img/thumb/ball"><span>Magic Abe Ball</span></a>
+	    			<div class="lb-overlay" id="ball">
+	    				<img src="css/img/full/ball.png"><div>
+	    			<h3>Magic Abe Ball</h3>
+	    			<p>For Critical Practices and New Media class, worked with team in which we conducted an ethnography on a Berkeley café owner and from our interactions, created a hyper-personal prototype for him using an Adafruit soundboard, audio editing and 3D printing software.<br><a href="https://www.youtube.com/watch?v=3qPE43j8w2E" target="_blank">Watch here!</a></br></p>
+	    			<a href="#book" class="glyphicon glyphicon-chevron-left"></a>
+	    			<a href="#phil" class="glyphicon glyphicon-chevron-right"></a>
+	    		</div>
+	    		<a href="#page" class="lb-close">CLOSE</a>
+	    		</div>
+	    		</div>
+	    		<div class="col-sm-2 proj">
+	    			<a href="#phil">
+	    				<img src="css/img/thumb/phil"><span>Philippines Summer 2015</span></a>
+	    			<div class="lb-overlay" id="phil">
+	    				<img src="css/img/full/phil.png"><div>
+	    			<h3>Philippines Summer 2015</h3>
+	    			<p>Documented every day of my life in the Philippines with my family in summer 2015 with my iPhone and iMovie.<br><a href="https://www.youtube.com/playlist?list=PLler2osELfWFV6elOFVzVIvlrFMI1Z-Q8" target="_blank">Watch here!</a></br></p>
+	    			<a href="#ball" class="glyphicon glyphicon-chevron-left"></a>
 	    			<a href="#website" class="glyphicon glyphicon-chevron-right"></a>
 	    		</div>
 	    		<a href="#page" class="lb-close">CLOSE</a>
