--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 	    <section class="middle">
 	    		<div class="row">
-	    			<div class="col-lg-12 col-xs-12">
+	    			<div class="col-lg-12">
 	    				<div id="name">
 	    					<span class="there">MAYAA</span><span class="expand">NGELICA</span><span class="there">H</span><span class="expand">ERNANDEZ</span>
 	    				</div>
@@ -138,7 +138,7 @@
 	    <section class="projectsmiddle">
 	    	<div class="lb-album">
 	    		<div class="row">
-	    		<div class="col-sm-2 col-sm-offset-2 proj">
+	    		<div class="col-lg-2 col-lg-offset-2 col-md-2 col-md-offset-2 col-sm-12 proj">
 	    			<a href="#website">
 	    				<img src="css/img/thumb/webscreen"><span>Personal Website</span></a>
 	    			<div class="lb-overlay" id="website">
@@ -151,7 +151,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#fw">
 	    				<img src="css/img/thumb/fw"><span>Fun:Work</span></a>
 	    			<div class="lb-overlay" id="fw">
@@ -164,7 +164,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#asq">
 	    				<img src="css/img/thumb/asq"><span>A Sea of Quotes</span></a>
 	    			<div class="lb-overlay" id="asq">
@@ -177,7 +177,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#graphs">
 	    				<img src="css/img/thumb/graphs"><span>Graph Library Package and Clients</span></a>
 	    			<div class="lb-overlay" id="graphs">
@@ -192,7 +192,7 @@
 	    		</div>
 	    	</div>
 	    	<div class="row">
-	    		<div class="col-sm-2 col-sm-offset-2 proj">
+	    		<div class="col-lg-2 col-lg-offset-2 col-md-2 col-md-offset-2 col-sm-12 proj">
 	    			<a href="#jump">
 	    				<img src="css/img/thumb/jump"><span>Jumping Cubes Game</span></a>
 	    			<div class="lb-overlay" id="jump">
@@ -205,7 +205,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#beargit">
 	    				<img src="css/img/thumb/beargit"><span>Beargit</span></a>
 	    			<div class="lb-overlay" id="beargit">
@@ -218,7 +218,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#al">
 	    				<img src="css/img/thumb/al"><span>Assembler and Linker</span></a>
 	    			<div class="lb-overlay" id="al">
@@ -231,7 +231,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#pacman">
 	    				<img src="css/img/thumb/pacman"><span>Pacman Logical Planning Agent</span></a>
 	    			<div class="lb-overlay" id="pacman">
@@ -246,7 +246,7 @@
 	    		</div>
 	    	</div>
 	    	<div class="row">
-	    		<div class="col-sm-2 col-sm-offset-2 proj">
+	    		<div class="col-lg-2 col-lg-offset-2 col-md-2 col-md-offset-2 col-sm-12 proj">
 	    			<a href="#cud">
 	    				<img src="css/img/thumb/cud"><span>Cuddlr</span></a>
 	    			<div class="lb-overlay" id="cud">
@@ -259,7 +259,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#book">
 	    				<img src="css/img/thumb/book"><span>NaNoWriMo</span></a>
 	    			<div class="lb-overlay" id="book">
@@ -272,7 +272,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#ball">
 	    				<img src="css/img/thumb/ball"><span>Magic Abe Ball</span></a>
 	    			<div class="lb-overlay" id="ball">
@@ -285,7 +285,7 @@
 	    		<a href="#page" class="lb-close">CLOSE</a>
 	    		</div>
 	    		</div>
-	    		<div class="col-sm-2 proj">
+	    		<div class="col-lg-2 col-md-2 col-sm-12 proj">
 	    			<a href="#phil">
 	    				<img src="css/img/thumb/phil"><span>Philippines Summer 2015</span></a>
 	    			<div class="lb-overlay" id="phil">
