--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	<div class="container">
 		<div class="title">A Sea of Quotes Website</div>
 		<div class="description">
-		Born out of my love for the written wrod, I created this Tumblr blog in 2011 in which quotes from literature are posted frequently up until this day. As of December 2016, ASQ has over 305,000 followers and over 2 million visits. Instead of using pre-made Tumblr themes, I wrote and designed the theme myself from scratch using HTML, CSS, and JS on Tumblr's code editor. I've expanded The Sea of Quotes brand to Facebook (over 8K likes), Twitter (over 1K followers), and Pinterest (over 1.8K followers) and designed ASQ and literature themed shirts, selling them on The Seas Apparel, a Spreadshirt store. 
+		Born out of my love for the written word, I created this Tumblr blog in 2011 in which quotes from literature are posted frequently up until this day. As of December 2016, ASQ has over 305,000 followers and over 2 million visits. Instead of using pre-made Tumblr themes, I wrote and designed the theme myself from scratch using HTML, CSS, and JS on Tumblr's code editor. I've expanded The Sea of Quotes brand to Facebook (over 8K likes), Twitter (over 1K followers), and Pinterest (over 1.8K followers) and designed ASQ and literature themed shirts, selling them on The Seas Apparel, a Spreadshirt store. 
 		</div>
 	</div>
 	<div class="back">
