open old site in new tab

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	    	<img class="pw" src="img/pw4.png">
 		</div>
 		<div class="links">
-		<a href="http://mayaah.me/mayaah-2015"><div class="view" class="icon-link">Go to Old Website</div></a>
+		<a href="http://mayaah.me/mayaah-2015" target="_blank"><div class="view" class="icon-link">Go to Old Website</div></a>
 		</div>
 	</div>
 </div> 
