open all the links in new tabs

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 	    	<img class="asq" src="img/asq5.png">
 		</div>
 		<div class="links">
-		<a href="http://the-seas.spreadshirt.com/"><div class="view" class="icon-link">Go to The Seas Apparel</div></a>
-		<a href="http://aseaofquotes.com"><div class="view" class="icon-link">Go to ASQ</div></a>
+		<a href="http://the-seas.spreadshirt.com/" target="_blank"><div class="view" class="icon-link">Go to The Seas Apparel</div></a>
+		<a href="http://aseaofquotes.com" target="_blank"><div class="view" class="icon-link">Go to ASQ</div></a>
 		
 		</div>
 	</div>
@@ -178,7 +178,7 @@
 	    	<img class="ios" src="img/ios6.png">
 		</div>
 		<div class="links">
-		<a href="https://github.com/mayaah/ios-decal-proj4"><div class="view" class="icon-link">Code</div></a>
+		<a href="https://github.com/mayaah/ios-decal-proj4" target="_blank"><div class="view" class="icon-link">Code</div></a>
 		
 		</div>
 	</div>
@@ -209,7 +209,7 @@
 	    	<img class="vr" src="img/vr8.png">
 		</div>
 		<div class="links">
-		<a href="https://vr.berkeley.edu/"><div class="view" class="icon-link">Go to VR@B Website</div></a>
+		<a href="https://vr.berkeley.edu/" target="_blank"><div class="view" class="icon-link">Go to VR@B Website</div></a>
 		
 		</div>
 	</div>
@@ -239,9 +239,9 @@
 	    	<img class="medium" src="img/fs7.jpeg">
 		</div>
 		<div class="links">
-		<a href="https://github.com/cs160-berkeley/Group-3-Project"><div class="view" class="icon-link">Code</div></a>
-		<a href="https://docs.google.com/presentation/d/1qFHdf6j2w8NJPlXMvRkNDBUOcOwXqJJP0vipYf1DcRI/edit#slide=id.g13e218b3bb_1_104"><div class="view" class="icon-link">Final Report</div></a>
-		<a href="https://youtu.be/BO8_l8wDCCI?list=PLbok9t2URfW0de5E9PXyBXX1__gp1gXpM"><div class="view" class="icon-link">Concept Video</div></a>
+		<a href="https://github.com/cs160-berkeley/Group-3-Project" target="_blank"><div class="view" class="icon-link">Code</div></a>
+		<a href="https://docs.google.com/presentation/d/1qFHdf6j2w8NJPlXMvRkNDBUOcOwXqJJP0vipYf1DcRI/edit#slide=id.g13e218b3bb_1_104" target="_blank"><div class="view" class="icon-link">Final Report</div></a>
+		<a href="https://youtu.be/BO8_l8wDCCI?list=PLbok9t2URfW0de5E9PXyBXX1__gp1gXpM" target="_blank"><div class="view" class="icon-link">Concept Video</div></a>
 		
 		</div>
 	</div>
@@ -273,8 +273,8 @@
 	    	<img class="gc" src="img/gc8.jpg">
 		</div>
 		<div class="links">
-		<a href="https://www.hackster.io/11215/groovecube-9f00f2?ref=user&ref_id=34151&offset=0"><div class="view" class="icon-link">Hackster</div></a>
-		<a href="https://www.youtube.com/watch?v=ugA0GygsRgs"><div class="view" class="icon-link">Concept Video</div></a>
+		<a href="https://www.hackster.io/11215/groovecube-9f00f2?ref=user&ref_id=34151&offset=0" target="_blank"><div class="view" class="icon-link">Hackster</div></a>
+		<a href="https://www.youtube.com/watch?v=ugA0GygsRgs" target="_blank"><div class="view" class="icon-link">Concept Video</div></a>
 		
 		</div>
 	</div>
